# the-puzzle-network-adk

./: .env.example  .gitignore  .pre-commit-config.yaml  FILES_CREATED.txt  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SETUP.md  Sample.html  Sample2.html  examples.py  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/: main.py
src/the_puzzle_network/: __init__.py  convenience.py  logging.py  main.py  utils.py
src/the_puzzle_network/agents/: __init__.py  base_agent.py  brainstorm_agent.py  factory.py  game_builder_agent.py  puzzle_base_agent.py  puzzle_classifier_agent.py  puzzle_formatter_agent.py  puzzle_generator_agent.py  puzzle_publisher_agent.py  word_picker_agent.py
src/the_puzzle_network/tools/: __init__.py  factory.py  format_tools.py  publisher_tool.py  validation_tools.py  word_tools.py
src/the_puzzle_network/workflows/: puzzle_network_workflow.py
tests/: test_agents.py  test_tools.py
