[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the-puzzle-network"
version = "0.1.0"
description = "Multi-agent AI system for generating daily word games"
authors = [{name = "The Puzzle Network Team"}]
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.19.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
